--- a/docs/webiny-overview/serverless-cms/apps/file-manager.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/file-manager.mdx
@@ -33,3 +33,7 @@ When it comes to images, there is a built-in image editor. Using the editor you 
 ### Image delivery API
 
 The image delivery API allows you to resize images by specifying the image dimension as part of the image path. The images are automatically cached on the CDN, and there is a DDoS protection behind the service.
+
+Every image you upload to the File Manager is resized in [several preset sizes](https://github.com/webiny/webiny-js/blob/f4c43477d4d8e3cd685f34d66cb7e962e7c408fa/packages/api-file-manager/src/handlers/transform/loaders/sanitizeImageTransformations.ts#L1).  
+When you request an image URL, you can add a query parameter `width`, e.g. `https:/cdn.com/files/image.png?width=640`, and you'll get the image closest to that size.  
+It also protects you from someone requesting a million pixels wide image, i.e. if someone requests an absurdly big image, the last predefined dimension is returned.
