feat: add changelog for 5.22.1

--- a/docs/release-notes/5.14.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.14.0/upgrade-guide.mdx
@@ -44,7 +44,7 @@ yarn webiny deploy --env {environment}
 ```
 
 :::caution
-As stated in the [Overview](/docs/how-to-guides/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/how-to-guides/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 :::
 
 :::tip
