--- a/docs/release-notes/5.8.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.8.0/upgrade-guide.mdx
@@ -60,7 +60,7 @@ If the upgrade wizard does not show, try clearing cookies, local storage, and lo
 :::
 
 :::caution
-As stated in the [Overview](/docs/how-to-guides/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/how-to-guides/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 :::
 
 ## Optional - Upgrade Custom Elasticsearch Plugins
