--- a/docs/release-notes/5.11.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.11.0/upgrade-guide.mdx
@@ -58,7 +58,7 @@ yarn webiny deploy --env {environment}
 ```
 
 :::caution
-As stated in the [Overview](/docs/how-to-guides/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/how-to-guides/upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 :::
 
 :::tip
@@ -70,7 +70,7 @@ Learn more about different deployment environments in the [CI/CD / Environments]
 ### Pulumi v3 Upgrade
 
 :::danger
-As stated in the [Overview](/docs/how-to-guides/upgrade-webiny#pre-production-environments-first) section, to prevent any data loss or other critical problems that might occur while upgrading, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](/docs/how-to-guides/upgrade-webiny#pre-production-environments-first) section, to prevent any data loss or other critical problems that might occur while upgrading, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 :::
 
 As mentioned in the [changelog](/docs/release-notes/5.11.0/changelog), from the 5.11.0 release, all Webiny projects will use [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) v3.
