--- a/docs/contributing/documentation.mdx
+++ b/docs/contributing/documentation.mdx
@@ -58,7 +58,7 @@ To run the docs portal locally on your machine:
 3. `yarn`
 4. `yarn start`
 
-All the articles are inside the `docs` folder. Edit `sidebars.js` if you need to manage the items in the sidebar.
+All the articles are inside the `/docs` folder. Edit `sidebars.js` if you need to manage the items in the sidebar.
 
 ### Linters
 
