--- a/docs/release-notes/5.23.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.23.0/upgrade-guide.mdx
@@ -22,6 +22,8 @@ Make sure to check out the [5.23.0 changelog](/docs/release-notes/5.23.0/changel
 
 ## 1. Upgrade Webiny Packages
 
+This Webiny upgrade only requires upgrade of the NPM packages! :tada:
+
 Upgrade all `@webiny/*` packages by running the following command:
 
 ```bash
@@ -30,23 +32,9 @@ yarn up "@webiny/*@5.23.0"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.23.0`.
 
-:::info
-Before moving on, make sure you commit all your changes.
-:::
+## 2. Deploy Your Project
 
-## 2. Run the Upgrade Command
-
-The next step is to run the project upgrade:
-
-```bash
-yarn webiny upgrade
-```
-
-Once the upgrade command has finished, you can run the [`git status`](https://git-scm.com/docs/git-status) command to see all changes that the command performed.
-
-## 3. Deploy Your Project
-
-Finally, proceed by re-deploying your Webiny project:
+Proceed by re-deploying your Webiny project:
 
 ```bash
 # Execute in your project root.
