feat: add 5.23.0 upgrade docs

--- a/docs/release-notes/5.23.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.23.0/upgrade-guide.mdx
@@ -32,7 +32,19 @@ yarn up "@webiny/*@5.23.0"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.23.0`.
 
-## 2. Deploy Your Project
+:::info
+Before moving on, make sure you commit all your changes.
+:::
+
+## 2. Run the Upgrade Command
+
+The next step is to run the project upgrade:
+
+```bash
+yarn webiny upgrade
+```
+
+## 3. Deploy Your Project
 
 Proceed by re-deploying your Webiny project:
 
