feat: upgrade for node v14

--- a/docs/release-notes/5.23.0/changelog.mdx
+++ b/docs/release-notes/5.23.0/changelog.mdx
@@ -66,7 +66,7 @@ With prior versions of this loader, the following rule would be silently left as
 
 ### Use Node v14 for Lambda Runtime ([#2200](https://github.com/webiny/webiny-js/pull/2200))
 
-New projects created with v5.23.\* will use Node 14 runtime for the Lambda functions. Note that existing projects will not be upgraded, as this is not a crucial update, and everything works just fine with node 12. You _can_, however, manually update your babel configs and Pulumi configs if you want to use Node 14 in your existing project.
+All Lambda functions will now use Node 14 runtime. Existing user project Lambda configurations are upgraded via the upgrade script.
 
 ### Ability to Wait for Specific Context Property ([#2177](https://github.com/webiny/webiny-js/pull/2177))
 
