Request for minor updates
Updated webiny deploy command to `webiny deploy` command.
Updated FQDN to fully qualified domain name (FQDN)
Updated Cloudfront to CloudFront (only a few instances)

--- a/docs/enterprise/multi-tenancy.mdx
+++ b/docs/enterprise/multi-tenancy.mdx
@@ -36,7 +36,7 @@ There are several steps involved in enabling multi-tenancy:
 - adding a Lambda@Edge function to the Pulumi configuration
 - creating a certificate in AWS Certificate Manager (ACM), and linking it with CloudFront distribution
 
-Cloudfront will be used for TLS termination, and ACM for certificate management. Customers may use other 3rd party CDNs for those steps. If that’s the case, please get in touch so we can support you through the setup.
+CloudFront will be used for TLS termination, and ACM for certificate management. Customers may use other 3rd party CDNs for those steps. If that’s the case, please get in touch so we can support you through the setup.
 
 The following sections guide you through the process in a step-by-step manner.
 
@@ -282,7 +282,7 @@ For your sub-tenants, domain configuration is located in the tenant form:
 
 ## FAQ
 
-### I'm receiving a Pulumi error saying something about Cloudfront request headers.
+### I'm receiving a Pulumi error saying something about CloudFront request headers.
 
 You may occasionally run into an error that goes something like this:
 
@@ -310,9 +310,9 @@ You're probably seeing the following error:
 
 Lambda@Edge functions are replicated to all AWS Edge locations. This means that this particular function will not be deleted until AWS removes it from all the Edge locations. Even thought this error looks terrible, your deploy went just fine. Give it a couple of minutes, and re-deploy. You'll see that, after some time, your old Lambda@Edge function will be deleted successfully.
 
-### Pulumi throws an error when creating the website Cloudfront distribution
+### Pulumi throws an error when creating the website CloudFront distribution
 
-You can't have the same FQDN configured in more than 1 CF distribution under the same account. If you do, then you will see the following error.
+You can't have the same fully qualified domain name (FQDN) configured in more than 1 CF distribution under the same account. If you do, then you will see the following error.
 
 ```shell
  +  aws:cloudfront:Distribution delivery **creating failed** error: 1 error occurred:
@@ -329,4 +329,4 @@ Diagnostics:
     	status code: 409, request id: 0ad55a32-0a28-4411-abee-326808393fb9
 ```
 
-Go back to the CF distribution where that hostname is configured, remove it - if it's safe to do so - and re-run the webiny deploy command.
+Go back to the CF distribution where that hostname is configured, remove it - if it's safe to do so - and re-run the `webiny deploy` command.
