--- a/docs/enterprise/multi-tenancy.mdx
+++ b/docs/enterprise/multi-tenancy.mdx
@@ -36,7 +36,7 @@ There are several steps involved in enabling multi-tenancy:
 - adding a Lambda@Edge function to the Pulumi configuration
 - creating a certificate in AWS Certificate Manager (ACM), and linking it with CloudFront distribution
 
-CloudFront will be used for TLS termination, and ACM for certificate management. Customers may use other 3rd party CDNs for those steps. If that’s the case, please get in touch so we can support you through the setup.
+CloudFront will be used for TLS termination, and ACM for certificate management. Customers may use other 3rd party content delivery networks (CDNs) for those steps. If that’s the case, please get in touch so we can support you through the setup.
 
 The following sections guide you through the process in a step-by-step manner.
 
