Request for minor updates
Updated 'the the' with 'the'
Updated 'behaviour' with 'behavior'

--- a/docs/how-to-guides/scaffolding/graphql-api.mdx
+++ b/docs/how-to-guides/scaffolding/graphql-api.mdx
@@ -189,7 +189,7 @@ To learn more about how to write different types of tests, we recommend you chec
 
 The new GraphQL API can be extended in two ways.
 
-A more manual approach would be to create and register new [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugins, via which you define how you want to extend the GraphQL schema and all of the resolver functions. To learn more, take a look at the the [Extend GraphQL API](/docs/how-to-guides/extend-graphql-api) guide.
+A more manual approach would be to create and register new [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugins, via which you define how you want to extend the GraphQL schema and all of the resolver functions. To learn more, take a look at the [Extend GraphQL API](/docs/how-to-guides/extend-graphql-api) guide.
 
 On the other hand, a much faster way of extending the GraphQL API would be to use the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api) scaffold, which not only creates all of the boilerplate code, but also a set of essential GraphQL query and mutations, sets up the database connection, creates sample tests, and more.
 
@@ -207,7 +207,7 @@ By default, the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-grap
 
 #### How does security (authentication and authorization) work?
 
-Please note that, by default, the authentication and authorization logic isn't included in the created code. In other words, all of the created GraphQL query and mutation operations can be performed by anonymous (not logged-in) users, which is in most cases not the desired behaviour.
+Please note that, by default, the authentication and authorization logic isn't included in the created code. In other words, all of the created GraphQL query and mutation operations can be performed by anonymous (not logged-in) users, which is in most cases not the desired behavior.
 
 Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/tutorials/extend-admin-area/security/introduction) to learn how to implement these on your own.
 
