Request to update Saas to Sass
Updated 'Saas' to 'Sass' in the title, "Saas Variables"

--- a/docs/how-to-guides/webiny-applications/themes/page-builder/colors.mdx
+++ b/docs/how-to-guides/webiny-applications/themes/page-builder/colors.mdx
@@ -60,7 +60,7 @@ The reason for this is that your website theme and its stylesheets are imported 
 
 The reason why we import the website theme into the administration is that inside the Page Builder we want to show you how your page looks like when a user is browsing your website, and that is only possible if we have the same stylesheets as your website.
 
-## Saas Variables
+## Sass Variables
 
 Webiny themes use Sass variables, and all the colors are also mapped to CSS variables for ease of use and to enable better
 style inheritance. <!-- Add the link to style inheritance article -->
