--- a/docs/key-topics/ci-cd/testing-serverless-applications.mdx
+++ b/docs/key-topics/ci-cd/testing-serverless-applications.mdx
@@ -22,10 +22,11 @@ The main difference is that you can't really do local development anymore. This 
 
 E2E - https://dev.to/theburningmonk/why-you-should-use-temporary-stacks-when-you-do-serverless-2ai0
 
-Developing and testing serverless applications locally can be a challenge. Even with tools like SAM and the Serverless Framework, you often end up mocking your cloud resources, or resorting to tricks (like using pseudo-variables) to build ARNs and service endpoint URLs manually. While these workarounds may have the desired result, they also complicate our configuration files with (potentially brittle) user-constructed strings, which duplicates information already available to CloudFormation.
+Developing and testing serverless applications locally can be a challenge. Even with tools like AWS Serverless Application Model (SAM) and the Serverless Framework, you often end up mocking your cloud resources, or resorting to tricks (like using pseudo-variables) to build ARNs and service endpoint URLs manually. While these workarounds may have the desired result, they also complicate our configuration files with (potentially brittle) user-constructed strings, which duplicates information already available to CloudFormation.
 
 This is a common problem for me and other serverless developers I know. So I decided to come up with a solution.
 
+<i>
 Hi Steve,
 
 I’m sort of with you on that. I really like developing applications locally because of the speed of the feedback loop. However, once you start wiring up different cloud services, local development can get tricky. I often build a number of mocks to support the remote calls, and then test my code using a test runner (as opposed to something like sls invoke local -f someFunction -p event.json). This obviously takes more time to set up, but I also end up with a much more solid application.
@@ -34,3 +35,4 @@ Integration testing an individual function from your local machine or a CI/CD sy
 
 Thanks for the comment,
 Jeremy
+</i>  
