Request for minor updates to the Intro page
Please feel free to accept changes that improve readability.

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -14,9 +14,9 @@ import { Button, Link, Badge } from "theme-ui";
 
 Welcome! 👋
 
-**Webiny** is a JavaScript serverless application framework with a built-in CMS. We created Webiny specifically to help developers architect, build and deploy solutions on top of the serverless infrastructure, like AWS Lambda, DynamoDB, S3, and others. Support for other cloud vendors besides AWS is coming.
+**Webiny** is a JavaScript serverless application framework with a built-in CMS. We created Webiny specifically to help developers architect, build and deploy solutions on top of serverless infrastructure like AWS Lambda, DynamoDB, S3, and others. Support for other cloud vendors besides AWS is coming.
 
-We believe that serverless is the future of development. There are many tools that help you deploy and monitor an app on top of the serverless infrastructure. Those tools do that well. But when it comes to architecting and coding an application your set of options is very limited. This is where Webiny comes in.
+We believe that serverless is the future of development. There are many tools that help you deploy and monitor an app on top of serverless infrastructure. Those tools do that well. However, when it comes to architecting and coding an application, your set of options is very limited. This is where Webiny comes in.
 
 You can read more about Webiny and our philosophy below, but in case you want to immediately give Webiny a try, just follow the installation tutorial.
 
@@ -68,7 +68,7 @@ your instance.
 
 #### Serverless Application Framework
 
-This is the core of Webiny. It's a framework created specifically for building serverless solutions. The framework handles the deployment workflow, code bundling, project organization, and provides a ready-made architecture. It also includes an ACL module, GraphQL API and a Admin Panel SPA app.
+This is the core of Webiny. It's a framework created specifically for building serverless solutions. The framework handles the deployment workflow, code bundling, project organization, and provides a ready-made architecture. It also includes an access control list (ACL) module, GraphQL API, and an Admin Panel single-page application (SPA).
 
 The goal of the framework is to provide a ready-made solution that you can use in a matter of minutes. Developers should no longer deal with the complexities that come with using serverless infrastructure.
 
@@ -97,11 +97,11 @@ Webiny is created with 3 main goals in mind:
 - have an amazing developer experience
 - have less abstraction, more clarity
 
-Webiny at its core doesn't do much. Over 90% of Webiny's code is actually inside plugins. From how the Webiny CLI deploys your build, to how the API checks the user permissions, to the Webiny logo in side the Admin panel. Those are all plugins. This approach allowed us to build a platform that is flexible in every meaning of the word. You can completely replace existing plugins, turn them on or off or expand on them, customizing Webiny to fully fit your needs. An added benefit of this approach is that your plugins live outside the Webiny's core codebase, making upgrades much easier.
+Webiny at its core doesn't do much. Over 90% of Webiny's code is actually inside plugins. From how the Webiny CLI deploys your build, to how the API checks the user permissions, to the Webiny logo inside the Admin panel, those are all plugins. This approach allowed us to build a platform that is flexible in every meaning of the word. You can completely replace existing plugins, turn them on or off or expand on them, customizing Webiny to fully fit your needs. An added benefit of this approach is that your plugins live outside the Webiny's core codebase, making upgrades much easier.
 
-Another great thing about the plugin system is that it's unified across the board. It doesn't matter if you're changing the CLI functionality, adding new GraphQL resolvers or a new button in the UI, the approach is always the same. This makes it easy for anyone to pickup and understand how the whole system works.
+Another great thing about the plugin system is that it is unified across the board. It doesn't matter if you are changing the CLI functionality, adding new GraphQL resolvers, or a new button in the UI, the approach is always the same. This makes it easy for anyone to pickup and understand how the whole system works.
 
-Webiny believes in having a great developer experience. From first installing your project to deploying it and seeing it live all that's needed are 2 commands. Webiny handles all the heavy lifting under the hood, but in a transparent way, not hiding anything, or making it hard to understand. Less abstraction means better understanding of the system.
+Webiny believes in having a great developer experience. From installing your project to deploying it and seeing it <i>Live</i>, all that's needed are 2 commands. Webiny handles all the heavy lifting under the hood, but in a transparent way, not hiding anything, or making it hard to understand. Less abstraction means better understanding of the system.
 
 ---
 
@@ -153,13 +153,13 @@ Webiny Page Builder and Form Builder might look as simple drag and drop tools, b
 
 ## Contributing
 
-We welcome anyone who wishes to be a part of our project and help us achieve our mission. If you're looking at code contributions, check [this link](https://github.com/webiny/webiny-js/blob/next/docs/CONTRIBUTING.md), for documentation contribution check [this one](/docs/contributing/documentation). If you want to have a chat with the dev team, you'll find us on our [community slack](https://www.webiny.com/slack).
+We welcome anyone who wishes to be a part of our project and help us achieve our mission. If you're looking at code contributions, check [this link](https://github.com/webiny/webiny-js/blob/next/docs/CONTRIBUTING.md). For documentation contribution, check [this one](/docs/contributing/documentation). If you want to have a chat with the dev team, you'll find us on our [community slack](https://www.webiny.com/slack).
 
 ---
 
 ## Staying Informed
 
-Our project and documentation is constantly improving and changing. Anything important we post to our [blog](https://www.webiny.com/blog) and our [newsletter](https://landing.mailerlite.com/webforms/landing/g9f1i1).
+Our project and documentation is constantly improving and changing. If there is anything important, we post it to our [blog](https://www.webiny.com/blog) and our [newsletter](https://landing.mailerlite.com/webforms/landing/g9f1i1).
 
 Additionally, you can find useful information on our Twitter handle [@WebinyCMS](https://twitter.com/WebinyCMS).
 
