--- a/docs/key-topics/ci-cd/introduction.mdx
+++ b/docs/key-topics/ci-cd/introduction.mdx
@@ -26,7 +26,7 @@ The process of application development is much more than just writing applicatio
 
 - testing
 - deployment into multiple environments
-- organizing code in multiple VCS branches
+- organizing code in multiple version control system (VCS) branches
 - choosing the right cloud infrastructure resources for the job
 - storing and managing cloud infrastructure state files
 - security
@@ -39,7 +39,7 @@ For starters, we give a quick introduction on what CI/CD is and what are its dif
 
 ## What is CI/CD?
 
-**Continuous Integration (CI)** is a software application development practice where developers integrate code into a shared repository frequently, preferably several times a day. Each integration can then be verified by an automated build and automated tests. While automated testing is not strictly part of CI it is typically implied.
+**Continuous Integration (CI)** is a software application development practice where developers integrate code into a shared repository frequently, preferably several times a day. Each integration can then be verified by an automated build and automated tests. While automated testing is not strictly part of CI, it is typically implied.
 
 **Continuous deployment (CD)** is a software application development practice where code changes are automatically prepared for a release to production.
 
@@ -48,7 +48,7 @@ Note that the **CD** abbreviation can also stand for **continuous delivery**, wh
 > Continuous delivery is the ability to deliver software that can be deployed at any time through manual releases; this is in contrast to continuous deployment which uses automated deployments.
 
 :::info
-In the rest of this key topics section, when mentioning the **CD** abbreviation, we're explicitly referring to the **continuous deployment**.
+In the rest of this key topics section, when mentioning the **CD** abbreviation, we're explicitly referring to **continuous deployment**.
 :::
 
 ## Different Phases
@@ -66,9 +66,9 @@ In general, the CI/CD workflow, sometimes also referred to as a release cycle, c
 
 <!-- vale on -->
 
-It all starts with the **planing** phase, in which we define the work that needs to be done, and delegate it to different members of the team. Teams use different approaches in order to organize the team and track its progress, for example [Scrum](https://en.wikipedia.org/wiki/Scrum_%28software_development%29) or [Kanban](https://en.wikipedia.org/wiki/Kanban).
+It all starts with the **planning** phase, in which we define the work that needs to be done, and delegate it to different members of the team. Teams use different approaches in order to organize the team and track its progress, for example [Scrum](https://en.wikipedia.org/wiki/Scrum_%28software_development%29) or [Kanban](https://en.wikipedia.org/wiki/Kanban).
 
-Once the work has been delegated, every developer goes through **code**, **build**, and **test** phases. Different tools, processes and services can be used here, starting from services for code storage and [version control](https://en.wikipedia.org/wiki/Version_control) like [Git](https://www.git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F) and [GitHub](https://en.wikipedia.org/wiki/GitHub), different testing frameworks like [Jest](https://jestjs.io/), [Mocha](https://mochajs.org/) or [Cypress](https://www.cypress.io/), build tools like [Babel](https://babeljs.io/), [Webpack](https://webpack.js.org/), and so on.
+Once the work has been delegated, every developer goes through the **code**, **build**, and **test** phases. Different tools, processes and services can be used here, starting from services for code storage and [version control](https://en.wikipedia.org/wiki/Version_control) like [Git](https://www.git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F) and [GitHub](https://en.wikipedia.org/wiki/GitHub), different testing frameworks like [Jest](https://jestjs.io/), [Mocha](https://mochajs.org/) or [Cypress](https://www.cypress.io/), build tools like [Babel](https://babeljs.io/), [Webpack](https://webpack.js.org/), and so on.
 
 :::info
 Most of the mentioned tools are specific to the JavaScript / Node.js ecosystem, and come set up by default in every Webiny project. A full list of used technologies can be found in the [Tools and Libraries](/docs/key-topics/tools-libraries) topic.
@@ -80,9 +80,9 @@ Once the tests are passing, we reach the **release** and **deploy** phases, in w
 By default, Webiny projects are deployed with Pulumi - a modern infrastructure as code (IaC) solution. Check out the [Iac with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) topic to learn more.
 :::
 
-Last but certainly not the least, we reach the **operate** and **monitor** phases in which we are, essentially, ensuring that the system that was deployed is operating as expected. Different speed and resource metrics, error reports and alerts are what provide the information on how stable our system is.
+Last, but certainly not the least, we reach the **operate** and **monitor** phases in which we are, essentially, ensuring that the system that was deployed is operating as expected. Different speed and resource metrics, error reports and alerts are what provide the information on how stable our system is.
 
-In general, monitoring severless applications has shown to be a bit harder than monitoring "traditional" applications, mainly because of their distributed nature. They are almost always constructed out of several services that talk to each other and trying to find the service that is the root cause of a new issue can be hard. Fortunately, there are tools and services that assist us in this regard as well, for example [AWS CloudWatch](https://aws.amazon.com/cloudwatch/) and [AWS X-ray](https://aws.amazon.com/xray/), [Lumigo](https://lumigo.io/), [Epsagon](https://epsagon.com/product/), and others.
+In general, monitoring ‍serverless applications has shown to be a bit harder than monitoring "traditional" applications, mainly because of their distributed nature. They are almost always constructed out of several services that talk to each other and trying to find the service that is the root cause of a new issue can be hard. Fortunately, there are tools and services that assist us in this regard as well, such as [AWS CloudWatch](https://aws.amazon.com/cloudwatch/) and [AWS X-ray](https://aws.amazon.com/xray/), [Lumigo](https://lumigo.io/), [Epsagon](https://epsagon.com/product/), and others.
 
 And this completes the CI/CD workflow. Once we've passed through all of the steps, the whole workflow starts from the beginning, and it is repeating infinitely as part of our project development process. Note that the explained phases shouldn't be considered as a hard rule - certain phases can be implemented in different ways and adjusted to your needs. <!-- Be sure to check the [CI/CD How-To Guide](/docs/key-topics/ci-cd/introduction) for more practical information on how to set up a CI/CD workflow for your Webiny project. -->
 
