Request for minor updates
In the last FAQ, I removed 2 asterisks after NPM. Not sure why they were there.

--- a/docs/key-topics/project-organization/monorepo-organization.mdx
+++ b/docs/key-topics/project-organization/monorepo-organization.mdx
@@ -16,15 +16,15 @@ Every Webiny project is organized as a [monorepo](https://www.atlassian.com/git/
 
 Behind the scenes, it is the [yarn 2](https://yarnpkg.com/) package manager that enables this organization, via its [workspaces feature](https://yarnpkg.com/features/workspaces):
 
-> The Yarn workspaces aim to make working with monorepos easy, solving one of the main use cases for yarn link in a more declarative way. In short, they allow multiple of your projects to live together in the same repository AND to cross-reference each others - any modification to one's source code being instantly applied to the others.
+> The Yarn workspaces aim to make working with monorepos easy, solving one of the main use cases for yarn link in a more declarative way. In short, they allow multiple projects of yours to live together in the same repository <i>and</i> to cross-reference each other - any modification to one's source code being instantly applied to the others.
 
 ## Workspaces vs. Packages
-Terms **workspace** and **package**, essentially, refer to the same thing - an NPM package or in other words, a folder with a `package.json` file and some code. Depending on the context, we use one of the two.
+Essentially, the terms **workspace** and **package** refer to the same thing - an NPM package, or in other words, a folder with a `package.json` file and some code. Depending on the context, we use one of the two.
 
-When talking about the monorepo organization and yarn 2 and its workspaces feature, then the term **workspace** makes more sense to use. On the other hand, when talking about project applications and the actual code, the term **package** is used. We always say "import this package", never "import this workspace".
+When talking about the monorepo organization and yarn 2 and its workspaces feature, the term **workspace** makes more sense to use. On the other hand, when talking about project applications and the actual code, the term **package** is used. We always say <i>import this package</i>, and not <i>import this workspace</i>.
 
 :::info
-For more information on packages and their role in a Webiny project, take a step back and check the [Applications and Packages](/docs/key-topics/project-organization/project-applications-and-packages) topic.
+For more information on packages and their role in a Webiny project, take a step back and check the [Project Applications and Packages](/docs/key-topics/project-organization/project-applications-and-packages) topic.
 :::
 
 ## Benefits of the Monorepo Organization
@@ -47,7 +47,7 @@ An abstract example of packages and shared packages, located in different projec
 <!-- vale on -->
 
 #### Optimally Storing Dependencies
-The yarn 2 workspaces feature makes sure that the same dependencies required by multiple packages are stored in a most efficient way. For example, when specifying the React library as a dependency in two or more packages, the library is actually downloaded only once. On larger projects, this significantly reduces the overall size on disk of all of the different dependencies that your packages may require.
+The yarn 2 workspaces feature makes sure that the same dependencies required by multiple packages are stored in the most efficient way. For example, when specifying the React library as a dependency in two or more packages, the library is actually downloaded only once. On larger projects, this significantly reduces the <i>overall size on disk</i> of all of the different dependencies that your packages may require.
 
 
 
@@ -75,7 +75,7 @@ In every Webiny project, the list of all workspaces can be found in the `package
 (...)
 ```
 
-In addition to the above shown list, you're also free to add more workspaces, if need be. You will be updating this list whenever you're about to add a new package to your project.
+In addition to the above shown list, you're also free to add more workspaces, if need be. You will be updating this list whenever you are about to add a new package to your project.
 
 :::info
 For convenience's sake, different scaffolding commands, that create new packages, update the workspaces list automatically for you.
@@ -91,6 +91,6 @@ To make it a bit easier to work with multiple packages in your Webiny project, W
 
 Yes, every Webiny project is organized as a monorepo.
 
-#### Can we use a different package manager, like yarn classic or NPM?**
+#### Can we use a different package manager, like yarn classic or NPM?
 
 At the moment, Webiny projects are set up to work with [yarn 2](https://yarnpkg.com/), exclusively.
